# topology-discovery-lab

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
config/: config.example.yaml
docs/: ARCHITECTURE.md  CODE_STYLE.md  DESIGN.md  NEXT_TASKS.md  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  TESTING.md
reports/real-world-testing/: 2026-05-15-discovery-assessment.md  2026-05-18-0-2-segments-assessment.md
services/topology_discovery/: config.py  icmp.py  main.py  models.py  neo4j_repository.py  parser.py  snmp.py  ssh.py
tests/: test_config.py  test_icmp.py  test_main.py  test_models.py  test_neo4j_repository.py  test_parser.py  test_snmp.py  test_ssh.py
