[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topology-discovery-lab"
version = "0.1.0"
description = "Network topology discovery backend lab."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "neo4j>=5.0,<6.0",
    "paramiko>=3.0,<4.0",
    "pydantic>=2.0,<3.0",
    "pysnmp>=7.0,<8.0",
    "pyyaml>=6.0,<7.0",
    "scapy>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8,<2.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.4,<1.0",
]

[tool.setuptools.packages.find]
include = ["services*"]
exclude = ["config*", "docs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
packages = ["services.topology_discovery"]

[[tool.mypy.overrides]]
module = ["pysnmp.*", "yaml"]
ignore_missing_imports = true
